fix header z-index

--- a/app/styles/layout/_header.sass
+++ b/app/styles/layout/_header.sass
@@ -1,6 +1,7 @@
 .l-header
   .navbar
     position: fixed
+    z-index: 10
     top: 0
     left: 0
     width: 100%
